// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verdict contract over fixtures (lossless mode) > examples/definitions.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -101,
    "savings_pct": -10.8,
    "source": 931,
    "toon": 1032,
  },
  "mode": "lossless",
  "profile": {
    "name": "definitions",
    "source_type": "markdown",
    "stats": {
      "definitions": 4,
      "headings": 5,
      "lines": 26,
      "list_items": 0,
      "paragraphs": 4,
      "rules": 2,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Converter Definitions",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -29,
        "savings_pct": -10.8,
        "source": 266,
        "toon": 295,
      },
      {
        "chars_per_token": 4,
        "savings": -25,
        "savings_pct": -10.8,
        "source": 233,
        "toon": 258,
      },
      {
        "chars_per_token": 4.5,
        "savings": -22,
        "savings_pct": -10.8,
        "source": 207,
        "toon": 229,
      },
    ],
    "savings": -25,
    "savings_pct": -10.7,
    "source": 233,
    "toon": 258,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > examples/prose.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -90,
    "savings_pct": -4.4,
    "source": 2030,
    "toon": 2120,
  },
  "mode": "lossless",
  "profile": {
    "name": "raw_prose",
    "source_type": "markdown",
    "stats": {
      "definitions": 1,
      "headings": 3,
      "lines": 22,
      "list_items": 0,
      "paragraphs": 8,
      "rules": 2,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Field Note",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -26,
        "savings_pct": -4.4,
        "source": 580,
        "toon": 606,
      },
      {
        "chars_per_token": 4,
        "savings": -22,
        "savings_pct": -4.4,
        "source": 508,
        "toon": 530,
      },
      {
        "chars_per_token": 4.5,
        "savings": -20,
        "savings_pct": -4.4,
        "source": 451,
        "toon": 471,
      },
    ],
    "savings": -22,
    "savings_pct": -4.3,
    "source": 508,
    "toon": 530,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > examples/requirements.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -114,
    "savings_pct": -13.3,
    "source": 854,
    "toon": 968,
  },
  "mode": "lossless",
  "profile": {
    "name": "requirements",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 5,
      "lines": 23,
      "list_items": 9,
      "paragraphs": 0,
      "rules": 9,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Release Smoke Requirements",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -33,
        "savings_pct": -13.3,
        "source": 244,
        "toon": 277,
      },
      {
        "chars_per_token": 4,
        "savings": -28,
        "savings_pct": -13.3,
        "source": 214,
        "toon": 242,
      },
      {
        "chars_per_token": 4.5,
        "savings": -25,
        "savings_pct": -13.3,
        "source": 190,
        "toon": 215,
      },
    ],
    "savings": -28,
    "savings_pct": -13.1,
    "source": 214,
    "toon": 242,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > examples/table.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -495,
    "savings_pct": -141.4,
    "source": 350,
    "toon": 845,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 1,
      "lines": 9,
      "list_items": 0,
      "paragraphs": 0,
      "rules": 1,
      "table_rows": 4,
      "tables": 1,
    },
    "title": "Profile Matrix",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -141,
        "savings_pct": -141.4,
        "source": 100,
        "toon": 241,
      },
      {
        "chars_per_token": 4,
        "savings": -124,
        "savings_pct": -141.4,
        "source": 88,
        "toon": 211,
      },
      {
        "chars_per_token": 4.5,
        "savings": -110,
        "savings_pct": -141.4,
        "source": 78,
        "toon": 188,
      },
    ],
    "savings": -123,
    "savings_pct": -139.8,
    "source": 88,
    "toon": 211,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/AGENTS.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -3114,
    "savings_pct": -129,
    "source": 2414,
    "toon": 5528,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 6,
      "headings": 9,
      "lines": 55,
      "list_items": 28,
      "paragraphs": 1,
      "rules": 21,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "AGENTS.md - doc2toon",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -890,
        "savings_pct": -129,
        "source": 690,
        "toon": 1579,
      },
      {
        "chars_per_token": 4,
        "savings": -778,
        "savings_pct": -129,
        "source": 604,
        "toon": 1382,
      },
      {
        "chars_per_token": 4.5,
        "savings": -692,
        "savings_pct": -129,
        "source": 536,
        "toon": 1228,
      },
    ],
    "savings": -778,
    "savings_pct": -128.8,
    "source": 604,
    "toon": 1382,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/CLAUDE.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -97,
    "savings_pct": -22.4,
    "source": 434,
    "toon": 531,
  },
  "mode": "lossless",
  "profile": {
    "name": "requirements",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 2,
      "lines": 13,
      "list_items": 6,
      "paragraphs": 1,
      "rules": 7,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "CLAUDE.md",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -28,
        "savings_pct": -22.4,
        "source": 124,
        "toon": 152,
      },
      {
        "chars_per_token": 4,
        "savings": -24,
        "savings_pct": -22.4,
        "source": 109,
        "toon": 133,
      },
      {
        "chars_per_token": 4.5,
        "savings": -22,
        "savings_pct": -22.4,
        "source": 96,
        "toon": 118,
      },
    ],
    "savings": -24,
    "savings_pct": -22,
    "source": 109,
    "toon": 133,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/SKILL.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -3306,
    "savings_pct": -108.8,
    "source": 3039,
    "toon": 6345,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 5,
      "headings": 11,
      "lines": 75,
      "list_items": 25,
      "paragraphs": 11,
      "rules": 19,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Skill: Review a Markdown document for context-density risks before conversion",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -945,
        "savings_pct": -108.8,
        "source": 868,
        "toon": 1813,
      },
      {
        "chars_per_token": 4,
        "savings": -826,
        "savings_pct": -108.8,
        "source": 760,
        "toon": 1586,
      },
      {
        "chars_per_token": 4.5,
        "savings": -735,
        "savings_pct": -108.8,
        "source": 675,
        "toon": 1410,
      },
    ],
    "savings": -826,
    "savings_pct": -108.7,
    "source": 760,
    "toon": 1586,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/problematic/duplicate-rules.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -109,
    "savings_pct": -23.6,
    "source": 462,
    "toon": 571,
  },
  "mode": "lossless",
  "profile": {
    "name": "requirements",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 3,
      "lines": 14,
      "list_items": 6,
      "paragraphs": 0,
      "rules": 6,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Duplicate Rule Fixture",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -31,
        "savings_pct": -23.6,
        "source": 132,
        "toon": 163,
      },
      {
        "chars_per_token": 4,
        "savings": -27,
        "savings_pct": -23.6,
        "source": 116,
        "toon": 143,
      },
      {
        "chars_per_token": 4.5,
        "savings": -24,
        "savings_pct": -23.6,
        "source": 103,
        "toon": 127,
      },
    ],
    "savings": -27,
    "savings_pct": -23.3,
    "source": 116,
    "toon": 143,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "duplicate_rule",
      "evidence": "The converter must validate official TOON round trips before writing output.",
      "message": "Possible duplicate rule in "Build Gate".",
      "range": {
        "char_end": 262,
        "char_start": 184,
        "line_end": 7,
        "line_start": 7,
      },
      "severity": "warning",
      "suggestion": "Merge these rules or keep only the version with the clearest action and scope.",
    },
    {
      "code": "duplicate_rule",
      "evidence": "Public docs must avoid universal savings claims.",
      "message": "Possible duplicate rule in "Documentation Gate".",
      "range": {
        "char_end": 461,
        "char_start": 411,
        "line_end": 13,
        "line_start": 13,
      },
      "severity": "warning",
      "suggestion": "Merge these rules or keep only the version with the clearest action and scope.",
    },
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/problematic/long-section.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -136,
    "savings_pct": -5.8,
    "source": 2352,
    "toon": 2488,
  },
  "mode": "lossless",
  "profile": {
    "name": "requirements",
    "source_type": "markdown",
    "stats": {
      "definitions": 1,
      "headings": 3,
      "lines": 25,
      "list_items": 15,
      "paragraphs": 1,
      "rules": 17,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Long Section Fixture",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -39,
        "savings_pct": -5.8,
        "source": 672,
        "toon": 711,
      },
      {
        "chars_per_token": 4,
        "savings": -34,
        "savings_pct": -5.8,
        "source": 588,
        "toon": 622,
      },
      {
        "chars_per_token": 4.5,
        "savings": -30,
        "savings_pct": -5.8,
        "source": 523,
        "toon": 553,
      },
    ],
    "savings": -34,
    "savings_pct": -5.8,
    "source": 588,
    "toon": 622,
  },
  "toon_candidate": null,
  "verdict": "split_first",
  "warnings": [
    {
      "code": "long_section",
      "evidence": "2247 chars, 15 non-empty lines, 14 bullets",
      "message": "Long section: "Always-On Review Procedure".",
      "range": {
        "char_end": 2290,
        "char_start": 24,
        "line_end": 21,
        "line_start": 3,
      },
      "severity": "info",
      "suggestion": "Consider splitting this into a shorter canonical rule plus one or more task-specific skill files.",
    },
    {
      "code": "split_candidate",
      "evidence": "Detected themes: conversion, release, privacy, ui, testing",
      "message": "Possible split candidate: "Always-On Review Procedure".",
      "range": {
        "char_end": 2290,
        "char_start": 24,
        "line_end": 21,
        "line_start": 3,
      },
      "severity": "info",
      "suggestion": "Keep the short canonical instruction here and move detailed procedure into a focused skill file.",
    },
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/problematic/mixed-agent-context.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -3011,
    "savings_pct": -127.6,
    "source": 2360,
    "toon": 5371,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 5,
      "lines": 45,
      "list_items": 17,
      "paragraphs": 5,
      "rules": 22,
      "table_rows": 3,
      "tables": 1,
    },
    "title": "Mixed Agent Context Fixture",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -860,
        "savings_pct": -127.6,
        "source": 674,
        "toon": 1535,
      },
      {
        "chars_per_token": 4,
        "savings": -753,
        "savings_pct": -127.6,
        "source": 590,
        "toon": 1343,
      },
      {
        "chars_per_token": 4.5,
        "savings": -669,
        "savings_pct": -127.6,
        "source": 524,
        "toon": 1194,
      },
    ],
    "savings": -753,
    "savings_pct": -127.6,
    "source": 590,
    "toon": 1343,
  },
  "toon_candidate": null,
  "verdict": "split_first",
  "warnings": [
    {
      "code": "duplicate_rule",
      "evidence": "The optimizer should preserve useful context density.",
      "message": "Possible duplicate rule in "Product Philosophy".",
      "range": {
        "char_end": 207,
        "char_start": 152,
        "line_end": 7,
        "line_start": 7,
      },
      "severity": "warning",
      "suggestion": "Merge these rules or keep only the version with the clearest action and scope.",
    },
    {
      "code": "vague_rule",
      "evidence": "The agent should be smart about which details matter.",
      "message": "Possibly vague instruction in "Product Philosophy".",
      "range": {
        "char_end": 263,
        "char_start": 208,
        "line_end": 8,
        "line_start": 8,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "long_section",
      "evidence": "1574 chars, 14 non-empty lines, 13 bullets",
      "message": "Long section: "Always-On Procedure".",
      "range": {
        "char_end": 1852,
        "char_start": 265,
        "line_end": 27,
        "line_start": 10,
      },
      "severity": "info",
      "suggestion": "Consider splitting this into a shorter canonical rule plus one or more task-specific skill files.",
    },
    {
      "code": "split_candidate",
      "evidence": "Detected themes: conversion, release, privacy, ui, testing",
      "message": "Possible split candidate: "Always-On Procedure".",
      "range": {
        "char_end": 1852,
        "char_start": 265,
        "line_end": 27,
        "line_start": 10,
      },
      "severity": "info",
      "suggestion": "Keep the short canonical instruction here and move detailed procedure into a focused skill file.",
    },
    {
      "code": "split_candidate",
      "evidence": "Detected themes: when preparing release notes, when drafting ui copy, when reviewing privacy posture, when authoring skills",
      "message": "Possible split candidate: "Release, UI, Privacy, And Skill Workflow".",
      "range": {
        "char_end": 2211,
        "char_start": 1853,
        "line_end": 37,
        "line_start": 28,
      },
      "severity": "info",
      "suggestion": "Keep the short canonical instruction here and move detailed procedure into a focused skill file.",
    },
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/problematic/split-candidate.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -105,
    "savings_pct": -13.3,
    "source": 790,
    "toon": 895,
  },
  "mode": "lossless",
  "profile": {
    "name": "requirements",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 3,
      "lines": 16,
      "list_items": 1,
      "paragraphs": 4,
      "rules": 3,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Split Candidate Fixture",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -30,
        "savings_pct": -13.3,
        "source": 226,
        "toon": 256,
      },
      {
        "chars_per_token": 4,
        "savings": -26,
        "savings_pct": -13.3,
        "source": 198,
        "toon": 224,
      },
      {
        "chars_per_token": 4.5,
        "savings": -23,
        "savings_pct": -13.3,
        "source": 176,
        "toon": 199,
      },
    ],
    "savings": -26,
    "savings_pct": -13.1,
    "source": 198,
    "toon": 224,
  },
  "toon_candidate": null,
  "verdict": "split_first",
  "warnings": [
    {
      "code": "split_candidate",
      "evidence": "Detected themes: when reviewing conversion behavior, when preparing release notes, when reviewing privacy posture, when drafting ui copy",
      "message": "Possible split candidate: "Conversion, Release, Privacy, And UI Workflow".",
      "range": {
        "char_end": 714,
        "char_start": 27,
        "line_end": 12,
        "line_start": 3,
      },
      "severity": "info",
      "suggestion": "Keep the short canonical instruction here and move detailed procedure into a focused skill file.",
    },
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/problematic/vague-rules.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -105,
    "savings_pct": -30.3,
    "source": 346,
    "toon": 451,
  },
  "mode": "lossless",
  "profile": {
    "name": "requirements",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 3,
      "lines": 14,
      "list_items": 6,
      "paragraphs": 0,
      "rules": 6,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Vague Rule Fixture",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -30,
        "savings_pct": -30.3,
        "source": 99,
        "toon": 129,
      },
      {
        "chars_per_token": 4,
        "savings": -26,
        "savings_pct": -30.3,
        "source": 87,
        "toon": 113,
      },
      {
        "chars_per_token": 4.5,
        "savings": -23,
        "savings_pct": -30.3,
        "source": 77,
        "toon": 100,
      },
    ],
    "savings": -26,
    "savings_pct": -29.9,
    "source": 87,
    "toon": 113,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "vague_rule",
      "evidence": "The agent should be smart about context.",
      "message": "Possibly vague instruction in "Operating Guidance".",
      "range": {
        "char_end": 87,
        "char_start": 45,
        "line_end": 5,
        "line_start": 5,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "vague_rule",
      "evidence": "The tool must make the output better.",
      "message": "Possibly vague instruction in "Operating Guidance".",
      "range": {
        "char_end": 127,
        "char_start": 88,
        "line_end": 6,
        "line_start": 6,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "vague_rule",
      "evidence": "The reviewer should use good judgment.",
      "message": "Possibly vague instruction in "Operating Guidance".",
      "range": {
        "char_end": 168,
        "char_start": 128,
        "line_end": 7,
        "line_start": 7,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "vague_rule",
      "evidence": "The workflow should handle edge cases gracefully.",
      "message": "Possibly vague instruction in "Operating Guidance".",
      "range": {
        "char_end": 220,
        "char_start": 169,
        "line_end": 8,
        "line_start": 8,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/realistic/AGENTS.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -12228,
    "savings_pct": -62.1,
    "source": 19690,
    "toon": 31918,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 30,
      "headings": 42,
      "lines": 460,
      "list_items": 100,
      "paragraphs": 102,
      "rules": 48,
      "table_rows": 32,
      "tables": 4,
    },
    "title": "AGENTS.md — Sluicegate",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -3494,
        "savings_pct": -62.1,
        "source": 5626,
        "toon": 9119,
      },
      {
        "chars_per_token": 4,
        "savings": -3057,
        "savings_pct": -62.1,
        "source": 4923,
        "toon": 7980,
      },
      {
        "chars_per_token": 4.5,
        "savings": -2717,
        "savings_pct": -62.1,
        "source": 4376,
        "toon": 7093,
      },
    ],
    "savings": -3057,
    "savings_pct": -62.1,
    "source": 4923,
    "toon": 7980,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "duplicate_rule",
      "evidence": "Make sure to run \`make schema-stubs\` after editing anything under",
      "message": "Possible duplicate rule in "Schema management".",
      "range": {
        "char_end": 9745,
        "char_start": 9678,
        "line_end": 217,
        "line_start": 217,
      },
      "severity": "warning",
      "suggestion": "Merge these rules or keep only the version with the clearest action and scope.",
    },
    {
      "code": "duplicate_rule",
      "evidence": "Never point a local pipeline run at the production warehouse; production",
      "message": "Possible duplicate rule in "Merge semantics".",
      "range": {
        "char_end": 10882,
        "char_start": 10808,
        "line_end": 245,
        "line_start": 245,
      },
      "severity": "warning",
      "suggestion": "Merge these rules or keep only the version with the clearest action and scope.",
    },
    {
      "code": "vague_rule",
      "evidence": "Handle errors gracefully in consumer shutdown hooks; orphaned offsets",
      "message": "Possibly vague instruction in "Dead-letter handling".",
      "range": {
        "char_end": 10171,
        "char_start": 10100,
        "line_end": 228,
        "line_start": 228,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "vague_rule",
      "evidence": "Use good judgment when deciding whether a failed backfill needs a full",
      "message": "Possibly vague instruction in "Backfills".",
      "range": {
        "char_end": 11277,
        "char_start": 11205,
        "line_end": 254,
        "line_start": 254,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/realistic/CLAUDE.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -7588,
    "savings_pct": -37.8,
    "source": 20056,
    "toon": 27644,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 23,
      "headings": 29,
      "lines": 435,
      "list_items": 89,
      "paragraphs": 108,
      "rules": 53,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "CLAUDE.md — Bramblebill monorepo",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -2168,
        "savings_pct": -37.8,
        "source": 5730,
        "toon": 7898,
      },
      {
        "chars_per_token": 4,
        "savings": -1897,
        "savings_pct": -37.8,
        "source": 5014,
        "toon": 6911,
      },
      {
        "chars_per_token": 4.5,
        "savings": -1686,
        "savings_pct": -37.8,
        "source": 4457,
        "toon": 6143,
      },
    ],
    "savings": -1897,
    "savings_pct": -37.8,
    "source": 5014,
    "toon": 6911,
  },
  "toon_candidate": null,
  "verdict": "split_first",
  "warnings": [
    {
      "code": "duplicate_rule",
      "evidence": "Always run \`pnpm typecheck\` before you push, otherwise CI fails at",
      "message": "Possible duplicate rule in "PR conventions".",
      "range": {
        "char_end": 13924,
        "char_start": 13856,
        "line_end": 309,
        "line_start": 309,
      },
      "severity": "warning",
      "suggestion": "Merge these rules or keep only the version with the clearest action and scope.",
    },
    {
      "code": "duplicate_rule",
      "evidence": "Never use JavaScript number arithmetic for invoice amounts; always",
      "message": "Possible duplicate rule in "Gotchas".",
      "range": {
        "char_end": 15083,
        "char_start": 15015,
        "line_end": 336,
        "line_start": 336,
      },
      "severity": "warning",
      "suggestion": "Merge these rules or keep only the version with the clearest action and scope.",
    },
    {
      "code": "vague_rule",
      "evidence": "Be careful with the database when you touch anything under",
      "message": "Possibly vague instruction in "Database and migrations".",
      "range": {
        "char_end": 12870,
        "char_start": 12812,
        "line_end": 286,
        "line_start": 286,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "vague_rule",
      "evidence": "Use good judgment when deciding whether a schema change needs a data",
      "message": "Possibly vague instruction in "Database and migrations".",
      "range": {
        "char_end": 13342,
        "char_start": 13272,
        "line_end": 297,
        "line_start": 297,
      },
      "severity": "warning",
      "suggestion": "Rewrite as a concrete rule with an action, condition, and verification step.",
    },
    {
      "code": "long_section",
      "evidence": "3069 chars, 50 non-empty lines, 14 bullets",
      "message": "Long section: "Testing".",
      "range": {
        "char_end": 12612,
        "char_start": 9557,
        "line_end": 279,
        "line_start": 225,
      },
      "severity": "info",
      "suggestion": "Consider splitting this into a shorter canonical rule plus one or more task-specific skill files.",
    },
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/realistic/SKILL.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -7491,
    "savings_pct": -38.9,
    "source": 19265,
    "toon": 26756,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 17,
      "headings": 37,
      "lines": 365,
      "list_items": 86,
      "paragraphs": 27,
      "rules": 12,
      "table_rows": 17,
      "tables": 2,
    },
    "title": "Quarterly financial board report",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -2140,
        "savings_pct": -38.9,
        "source": 5504,
        "toon": 7645,
      },
      {
        "chars_per_token": 4,
        "savings": -1873,
        "savings_pct": -38.9,
        "source": 4816,
        "toon": 6689,
      },
      {
        "chars_per_token": 4.5,
        "savings": -1665,
        "savings_pct": -38.9,
        "source": 4281,
        "toon": 5946,
      },
    ],
    "savings": -1873,
    "savings_pct": -38.9,
    "source": 4816,
    "toon": 6689,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/realistic/architecture-rfc.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -652,
    "savings_pct": -1.5,
    "source": 44790,
    "toon": 45442,
  },
  "mode": "lossless",
  "profile": {
    "name": "requirements",
    "source_type": "markdown",
    "stats": {
      "definitions": 1,
      "headings": 65,
      "lines": 839,
      "list_items": 0,
      "paragraphs": 60,
      "rules": 33,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "RFC-0047: Retiring the Nightly Batch Window at Lattermile",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -186,
        "savings_pct": -1.5,
        "source": 12797,
        "toon": 12983,
      },
      {
        "chars_per_token": 4,
        "savings": -163,
        "savings_pct": -1.5,
        "source": 11198,
        "toon": 11361,
      },
      {
        "chars_per_token": 4.5,
        "savings": -145,
        "savings_pct": -1.5,
        "source": 9953,
        "toon": 10098,
      },
    ],
    "savings": -163,
    "savings_pct": -1.5,
    "source": 11198,
    "toon": 11361,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/agent-context/realistic/config-reference.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": "	",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": 6811,
    "savings_pct": 21.1,
    "source": 32319,
    "toon": 25508,
  },
  "mode": "lossless",
  "profile": {
    "name": "table",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 1,
      "lines": 450,
      "list_items": 0,
      "paragraphs": 1,
      "rules": 0,
      "table_rows": 294,
      "tables": 28,
    },
    "title": "Stackmason Configuration Reference",
  },
  "safe_to_auto_apply": true,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": 1946,
        "savings_pct": 21.1,
        "source": 9234,
        "toon": 7288,
      },
      {
        "chars_per_token": 4,
        "savings": 1703,
        "savings_pct": 21.1,
        "source": 8080,
        "toon": 6377,
      },
      {
        "chars_per_token": 4.5,
        "savings": 1514,
        "savings_pct": 21.1,
        "source": 7182,
        "toon": 5668,
      },
    ],
    "savings": 1703,
    "savings_pct": 21.1,
    "source": 8080,
    "toon": 6377,
  },
  "toon_candidate": null,
  "verdict": "convert",
  "warnings": [],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/glossary.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -98,
    "savings_pct": -19.3,
    "source": 507,
    "toon": 605,
  },
  "mode": "lossless",
  "profile": {
    "name": "definitions",
    "source_type": "markdown",
    "stats": {
      "definitions": 3,
      "headings": 4,
      "lines": 18,
      "list_items": 0,
      "paragraphs": 3,
      "rules": 2,
      "table_rows": 0,
      "tables": 0,
    },
    "title": "Framework Definitions",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -28,
        "savings_pct": -19.3,
        "source": 145,
        "toon": 173,
      },
      {
        "chars_per_token": 4,
        "savings": -24,
        "savings_pct": -19.3,
        "source": 127,
        "toon": 151,
      },
      {
        "chars_per_token": 4.5,
        "savings": -22,
        "savings_pct": -19.3,
        "source": 113,
        "toon": 134,
      },
    ],
    "savings": -24,
    "savings_pct": -18.9,
    "source": 127,
    "toon": 151,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;

exports[`verdict contract over fixtures (lossless mode) > fixtures/sample.md: validates against schemas/verdict.v1.json and matches its snapshot 1`] = `
{
  "delimiter": ",",
  "flags": {
    "lossless": true,
    "target_reached": null,
    "valid": true,
  },
  "measured_chars": {
    "savings": -165,
    "savings_pct": -38.9,
    "source": 424,
    "toon": 589,
  },
  "mode": "lossless",
  "profile": {
    "name": "mixed",
    "source_type": "markdown",
    "stats": {
      "definitions": 0,
      "headings": 2,
      "lines": 21,
      "list_items": 3,
      "paragraphs": 1,
      "rules": 0,
      "table_rows": 2,
      "tables": 1,
    },
    "title": "Converter Sample",
  },
  "safe_to_auto_apply": false,
  "schema_version": "1.0",
  "token_estimates": {
    "estimator": "chars-per-token:4",
    "ratio_estimates": [
      {
        "chars_per_token": 3.5,
        "savings": -47,
        "savings_pct": -38.9,
        "source": 121,
        "toon": 168,
      },
      {
        "chars_per_token": 4,
        "savings": -41,
        "savings_pct": -38.9,
        "source": 106,
        "toon": 147,
      },
      {
        "chars_per_token": 4.5,
        "savings": -37,
        "savings_pct": -38.9,
        "source": 94,
        "toon": 131,
      },
    ],
    "savings": -41,
    "savings_pct": -38.7,
    "source": 106,
    "toon": 147,
  },
  "toon_candidate": null,
  "verdict": "keep_markdown",
  "warnings": [
    {
      "code": "negative_savings",
      "message": "TOON output is larger than the source text for this input.",
      "severity": "warning",
    },
  ],
}
`;
